--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ li {
 }
 
 img {
-    width: 100%;
+    width: 60%;
     height: auto;
     max-width: 100%;
 }
@@ -53,24 +53,26 @@ nav a:hover {
 }
 
 #banner {
-    width: 100%;
+    width: 50%;
     height: auto;
     background-color: white;
+    margin-left: 500px;
 }
 
 #banner img {
-    width: 60%;
+    width: 40%;
     height: auto;
+
 }
 
 .service {
     display: inline-block;
     background-color: white;
     border: 5px solid green;
-    border-radius: 5px;
+    border-radius: 2px;
     color: darkred;
     font-size: 2em;
-    padding: 20px;
+    padding: 10px;
     margin: 10px;
 }
 
@@ -83,4 +85,7 @@ td,
 th {
     border: 1px solid black;
     padding: 5px;
+}
+.pageID {
+    color: rgb(255, 0, 136);
 }
